# tree-sitter-apache-synapse

./: Cargo.toml  LICENSE-MIT  README.md  binding.gyp  grammar.js  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: api.txt  mediators.txt  sequences.txt  xml-start-tag.txt
